# formation-python

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
docs/: index.html
notebooks/: loading.ipynb  training.ipynb
src/test_proj/: truc.py
tests/: test_truc.py
