[tool.poetry]
name = "test-proj"
version = "0.1.0"
description = ""
authors = ["Bazire <bazire@anotherbrain.ai>"]
readme = "README.md"
packages = [{include = "test_proj", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.2.1"
xgboost = "^1.7.4"
pandas = "^1.5.3"
matplotlib = "^3.7.0"


[tool.poetry.group.dev.dependencies]
black = "~23.1.0"
isort = "~5.12.0"
pytest = "~7.2.1"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
